# proof_of_stake_rs

./: .gitignore  README.md
part1/: Cargo.toml
part1/src/: block.rs  blockchain.rs  lib.rs  main.rs  p2p.rs  transaction.rs  validator.rs  wallet.rs
part2/: Cargo.toml
part2/src/: block.rs  lib.rs  main.rs  wallet.rs
