[package]
name = "part2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
[dependencies]
sha2 = "0.10.8"
chrono = "0.4.31"
rand = "0.7"
hex = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
[dependencies.ed25519-dalek]
version = "1"